# specl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  spec.yml
docs/: SYNTAX.md
specs/ekga/: ISSUES.md  spec.md  spec.ttl
specs/excel_service/: spec.md
specs/html_presenter/: spec.md
specs/pptx_templater/: spec.md
specs/specforge_explorer/: spec.md
specs/specl_explorer/: spec.md
specs/specl_tool/: spec.md
src/specforge/: explorer.html  shapes.ttl  spec_assistant.py  spec_to_rdf.py
src/specl/: core.ttl  explorer.html  shapes.ttl  spec_assistant.py  spec_to_rdf.py  validate_spec.py
static/: index.html
